[package]
name = "substrate_api_explorer"
version = "0.1.0"
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]
edition = "2021"
description = ""

[workspace]
members = ["bundler"]

[package.metadata.bundle]
name = "subAPIxplr"
identifier = "by.alestsurko.substrate-api-explorer"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
resources = ["assets"]
version = "0.1.0"
category = "Developer Tool"

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
url = "2.4.0"
subxt = "0.29.0"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "sync"] }
scale-info = { version = "2.9.0", features = ["docs"] }
egui_demo_lib = { version = "0.22.0", features = [
    "syntax_highlighting",
    "serde",
] }
env_logger = "0.10"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
